[package]
name = "disrecord"
version = "0.3.4"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
bincode = "1.3.3"
clap = { version = "4.5.4", features = ["derive"] }
emojis = "0.6.2"
env_logger = "0.11.3"
humantime = "2.1.0"
itertools = "0.12.1"
log = "0.4.21"
log-panics = "2.1.0"
parse_duration = "2.1.1"
rand = "0.8.5"
regex = "1.10.4"
symphonia = { version = "0.5.4", default-features = false, features = ["pcm", "wav"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serenity = { version = "0.12.1", default_features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "voice"] }
songbird = { version = "0.4.1", features = ["receive"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "sync", "fs", "process"] }
ulid = { version = "1.1.2", features = ["serde"] }
zip = { version = "0.6.4", default_features = false }