[package]
name = "disrecord"
version = "0.3.5"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
bincode = "1.3.3"
clap = { version = "4.5.31", features = ["derive"] }
emojis = "0.6.4"
env_logger = "0.11.6"
humantime = "2.1.0"
itertools = "0.14.0"
log = "0.4.26"
log-panics = "2.1.0"
parse_duration = "2.1.1"
rand = "0.9.0"
regex = "1.11.1"
rustls = "0.23.23"
symphonia = { version = "0.5.4", default-features = false, features = ["pcm", "wav"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serenity = { version = "0.12.4", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "voice"] }
songbird = { version = "0.5.0", features = ["receive"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["fs", "macros", "process", "rt-multi-thread", "sync"] }
ulid = { version = "1.2.0", features = ["serde"] }
zip = { version = "0.6.6", default-features = false }